--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,9 @@
 SECRET_KEY=secret_key123
+
 DEBUG=1
 
-ALLOWED_HOSTS=localhost
+ALLOWED_HOSTS=*
+
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
