--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Django
-djangorestframework
-djangorestframework-simplejwt
-psycopg2-binary
+asgiref==3.3.1
+Django==3.1.7
+django-dotenv==1.4.2
+djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+psycopg2-binary==2.8.6
+PyJWT==2.0.1
+pytz==2021.1
+sqlparse==0.4.1
