--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 psycopg2-binary==2.8.6
 PyJWT==2.0.1
+python-dotenv==0.15.0
 pytz==2021.1
 sqlparse==0.4.1
