--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,11 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=demo-db
+
+# For google
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=<your-email>@gmail.com
+EMAIL_HOST_PASSWORD=<your-password>
+EMAIL_PORT=465
+EMAIL_USE_TLS=0
+EMAIL_USE_SSL=1
