--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -3,4 +3,5 @@ django-dotenv
 djangorestframework
 psycopg2-binary
 python-dotenv
+pyjwt
 git+https://github.com/janos-gonye/django-rest-jwt-registration.git@main
