add package name to 'example.requirements.txt'

--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -4,4 +4,4 @@ djangorestframework
 psycopg2-binary
 python-dotenv
 pyjwt
-git+https://github.com/janos-gonye/django-rest-jwt-registration.git@main
+drjr @ git+https://github.com/janos-gonye/django-rest-jwt-registration.git@main
