fix name and extend description in 'setup.cfg'

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = Django REST JWT Registration
+name = drjr
 version = 0.1.0
-description = Django app for registration, email - and password change with jwt tokens and email sending
+description = Django app for registration password reset, email - and password change with jwt tokens and email sending
 long_description = file:README.md
 url = https://github.com/janos-gonye/django-rest-jwt-registration
 license = MIT
