--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = drjr
+name = django-rest-jwt-registration
 version = 0.1.0
 description = Django app for registration password reset, email - and password change with jwt tokens and email sending
 long_description = file:README.md
@@ -23,6 +23,6 @@ python_requires = >=3.6
 setup_requires =
     setuptools >= 38.3.0
 install_requires =
-    Django>=3.2.2
-    djangorestframework>=3.12.4
-    pyjwt>=2.1.0
+    Django
+    djangorestframework
+    pyjwt
