--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,12 @@
 name = django-rest-jwt-registration
 version = 0.1.0
 description = Django app for registration password reset, email - and password change with jwt tokens and email sending
-long_description = file:README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/janos-gonye/django-rest-jwt-registration
 license = MIT
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 3 - Alfa
     Environment :: Web Environment
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
@@ -18,7 +19,8 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-include_package_data = true
+packages =
+    drjr
 python_requires = >=3.6
 setup_requires =
     setuptools >= 38.3.0
