--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [metadata]
 name = django-rest-jwt-registration
+author = János Gönye,
+author_email = janos.gonye@gmail.com
 version = 0.1.0
 description = Django app for registration password reset, email - and password change with jwt tokens and email sending
 long_description = file: README.md
