add 'migrations' and 'templates' to setup packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,8 @@ classifiers =
 [options]
 packages =
     drjr
+    drjr.migrations
+    drjr.templates
 python_requires = >=3.6
 setup_requires =
     setuptools >= 38.3.0
